c_headers/H5Fpublic.h

#  define libname "libhdf5.so"
#define H5CHECK          H5check()
#define H5CHECK
#define H5OPEN        H5open()
#define H5OPEN
/* The difference between a single file and a set of mounted files */
typedef enum H5F_scope_t {
    H5F_SCOPE_LOCAL	= 0,	/*specified file handle only		*/
    H5F_SCOPE_GLOBAL	= 1 	/*entire virtual file			*/
} H5F_scope_t;
/* Current "global" information about file */
typedef struct H5F_info2_t {
    struct {
	unsigned	version;	/* Superblock version # */
	hsize_t		super_size;	/* Superblock size */
	hsize_t		super_ext_size;	/* Superblock extension size */
    } super;
    struct {
	unsigned	version;	/* Version # of file free space management */
	hsize_t		meta_size;	/* Free space manager metadata size */
	hsize_t		tot_space;	/* Amount of free space in the file */
    } free;
    struct {
	unsigned	version;	/* Version # of shared object header info */
	hsize_t		hdr_size;       /* Shared object header message header size */
	H5_ih_info_t	msgs_info;      /* Shared object header message index & heap size */
    } sohm;
} H5F_info2_t;
/*
 * Types of allocation requests. The values larger than H5FD_MEM_DEFAULT
 * should not change other than adding new types to the end. These numbers
 * might appear in files.
 *
 * Note: please change the log VFD flavors array if you change this
 * enumeration.
 */
typedef enum H5F_mem_t {
    H5FD_MEM_NOLIST     = -1,   /* Data should not appear in the free list.
                                 * Must be negative.
                                 */
    H5FD_MEM_DEFAULT    = 0,    /* Value not yet set.  Can also be the
                                 * datatype set in a larger allocation
                                 * that will be suballocated by the library.
                                 * Must be zero.
                                 */
    H5FD_MEM_SUPER      = 1,    /* Superblock data */
    H5FD_MEM_BTREE      = 2,    /* B-tree data */
    H5FD_MEM_DRAW       = 3,    /* Raw data (content of datasets, etc.) */
    H5FD_MEM_GHEAP      = 4,    /* Global heap data */
    H5FD_MEM_LHEAP      = 5,    /* Local heap data */
    H5FD_MEM_OHDR       = 6,    /* Object header data */

    H5FD_MEM_NTYPES             /* Sentinel value - must be last */
} H5F_mem_t;
/* Free space section information */
typedef struct H5F_sect_info_t {
    haddr_t             addr;   /* Address of free space section */
    hsize_t             size;   /* Size of free space section */
} H5F_sect_info_t;
typedef struct H5F_retry_info_t {
    unsigned nbins;
    uint32_t *retries[H5F_NUM_METADATA_READ_RETRY_TYPES];
} H5F_retry_info_t;
/* Functions in H5F.c */
htri_t H5Fis_hdf5(const char *filename);
hid_t  H5Fcreate(const char *filename, unsigned flags,
		  	  hid_t create_plist, hid_t access_plist);
hid_t  H5Fopen(const char *filename, unsigned flags,
		        hid_t access_plist);
hid_t  H5Freopen(hid_t file_id);
herr_t H5Fflush(hid_t object_id, H5F_scope_t scope);
herr_t H5Fclose(hid_t file_id);
hid_t  H5Fget_create_plist(hid_t file_id);
hid_t  H5Fget_access_plist(hid_t file_id);
herr_t H5Fget_intent(hid_t file_id, unsigned * intent);
ssize_t H5Fget_obj_count(hid_t file_id, unsigned types);
ssize_t H5Fget_obj_ids(hid_t file_id, unsigned types, size_t max_objs, hid_t *obj_id_list);
herr_t H5Fget_vfd_handle(hid_t file_id, hid_t fapl, void **file_handle);
herr_t H5Fmount(hid_t loc, const char *name, hid_t child, hid_t plist);
herr_t H5Funmount(hid_t loc, const char *name);
hssize_t H5Fget_freespace(hid_t file_id);
herr_t H5Fget_filesize(hid_t file_id, hsize_t *size);
ssize_t H5Fget_file_image(hid_t file_id, void * buf_ptr, size_t buf_len);
herr_t H5Fget_mdc_config(hid_t file_id,
				H5AC_cache_config_t * config_ptr);
herr_t H5Fset_mdc_config(hid_t file_id,
				H5AC_cache_config_t * config_ptr);
herr_t H5Fget_mdc_hit_rate(hid_t file_id, double * hit_rate_ptr);
herr_t H5Fget_mdc_size(hid_t file_id,
                             size_t * max_size_ptr,
                             size_t * min_clean_size_ptr,
                             size_t * cur_size_ptr,
                             int * cur_num_entries_ptr);
herr_t H5Freset_mdc_hit_rate_stats(hid_t file_id);
ssize_t H5Fget_name(hid_t obj_id, char *name, size_t size);
herr_t H5Fget_info2(hid_t obj_id, H5F_info2_t *finfo);
herr_t H5Fget_metadata_read_retry_info(hid_t file_id, H5F_retry_info_t *info);
herr_t H5Fstart_swmr_write(hid_t file_id);
ssize_t H5Fget_free_sections(hid_t file_id, H5F_mem_t type,
   size_t nsects, H5F_sect_info_t *sect_info/*out*/);
herr_t H5Fclear_elink_file_cache(hid_t file_id);
herr_t H5Fset_latest_format(hid_t file_id, hbool_t latest_format);
herr_t H5Fstart_mdc_logging(hid_t file_id);
herr_t H5Fstop_mdc_logging(hid_t file_id);
herr_t H5Fget_mdc_logging_status(hid_t file_id,
                                       /*OUT*/ hbool_t *is_enabled,
                                       /*OUT*/ hbool_t *is_currently_logging);
herr_t H5Fformat_convert(hid_t fid);
herr_t H5Freset_page_buffering_stats(hid_t file_id);
herr_t H5Fget_page_buffering_stats(hid_t file_id, unsigned accesses[2],
   unsigned hits[2], unsigned misses[2], unsigned evictions[2], unsigned bypasses[2]);
herr_t H5Fget_mdc_image_info(hid_t file_id, haddr_t *image_addr, hsize_t *image_size);
 herr_t H5Fset_mpi_atomicity(hid_t file_id, hbool_t flag);
 herr_t H5Fget_mpi_atomicity(hid_t file_id, hbool_t *flag);
/* Macros */
//#define H5F_ACC_DEBUG	(H5CHECK H5OPEN 0x0000u)	/*print debug info (deprecated)*/

/* Typedefs */

/* Current "global" information about file */
typedef struct H5F_info1_t {
    hsize_t		super_ext_size;	/* Superblock extension size */
    struct {
	hsize_t		hdr_size;       /* Shared object header message header size */
	H5_ih_info_t	msgs_info;      /* Shared object header message index & heap size */
    } sohm;
} H5F_info1_t;
/* Function prototypes */
 herr_t H5Fget_info1(hid_t obj_id, H5F_info1_t *finfo);