src/nimhdf5/wrapper/H5Fpublic.nim


proc H5Fis_hdf5*(filename: cstring): htri_t {.cdecl, importc: "H5Fis_hdf5",
    dynlib: libname.}
proc H5Fcreate*(filename: cstring; flags: cuint; create_plist: hid_t;
               access_plist: hid_t): hid_t {.cdecl, importc: "H5Fcreate",
    dynlib: libname.}
proc H5Fopen*(filename: cstring; flags: cuint; access_plist: hid_t): hid_t {.cdecl,
    importc: "H5Fopen", dynlib: libname.}
proc H5Freopen*(file_id: hid_t): hid_t {.cdecl, importc: "H5Freopen", dynlib: libname.}
proc H5Fflush*(object_id: hid_t; scope: H5F_scope_t): herr_t {.cdecl,
    importc: "H5Fflush", dynlib: libname.}
proc H5Fclose*(file_id: hid_t): herr_t {.cdecl, importc: "H5Fclose", dynlib: libname.}
proc H5Fget_create_plist*(file_id: hid_t): hid_t {.cdecl,
    importc: "H5Fget_create_plist", dynlib: libname.}
proc H5Fget_access_plist*(file_id: hid_t): hid_t {.cdecl,
    importc: "H5Fget_access_plist", dynlib: libname.}
proc H5Fget_intent*(file_id: hid_t; intent: ptr cuint): herr_t {.cdecl,
    importc: "H5Fget_intent", dynlib: libname.}
proc H5Fget_obj_count*(file_id: hid_t; types: cuint): ssize_t {.cdecl,
    importc: "H5Fget_obj_count", dynlib: libname.}
proc H5Fget_obj_ids*(file_id: hid_t; types: cuint; max_objs: csize;
                    obj_id_list: ptr hid_t): ssize_t {.cdecl,
    importc: "H5Fget_obj_ids", dynlib: libname.}
proc H5Fget_vfd_handle*(file_id: hid_t; fapl: hid_t; file_handle: ptr pointer): herr_t {.
    cdecl, importc: "H5Fget_vfd_handle", dynlib: libname.}
proc H5Fmount*(loc: hid_t; name: cstring; child: hid_t; plist: hid_t): herr_t {.cdecl,
    importc: "H5Fmount", dynlib: libname.}
proc H5Funmount*(loc: hid_t; name: cstring): herr_t {.cdecl, importc: "H5Funmount",
    dynlib: libname.}
proc H5Fget_freespace*(file_id: hid_t): hssize_t {.cdecl,
    importc: "H5Fget_freespace", dynlib: libname.}
proc H5Fget_filesize*(file_id: hid_t; size: ptr hsize_t): herr_t {.cdecl,
    importc: "H5Fget_filesize", dynlib: libname.}
proc H5Fget_file_image*(file_id: hid_t; buf_ptr: pointer; buf_len: csize): ssize_t {.
    cdecl, importc: "H5Fget_file_image", dynlib: libname.}
proc H5Fget_mdc_config*(file_id: hid_t; config_ptr: ptr H5AC_cache_config_t): herr_t {.
    cdecl, importc: "H5Fget_mdc_config", dynlib: libname.}
proc H5Fset_mdc_config*(file_id: hid_t; config_ptr: ptr H5AC_cache_config_t): herr_t {.
    cdecl, importc: "H5Fset_mdc_config", dynlib: libname.}
proc H5Fget_mdc_hit_rate*(file_id: hid_t; hit_rate_ptr: ptr cdouble): herr_t {.cdecl,
    importc: "H5Fget_mdc_hit_rate", dynlib: libname.}
proc H5Fget_mdc_size*(file_id: hid_t; max_size_ptr: ptr csize;
                     min_clean_size_ptr: ptr csize; cur_size_ptr: ptr csize;
                     cur_num_entries_ptr: ptr cint): herr_t {.cdecl,
    importc: "H5Fget_mdc_size", dynlib: libname.}
proc H5Freset_mdc_hit_rate_stats*(file_id: hid_t): herr_t {.cdecl,
    importc: "H5Freset_mdc_hit_rate_stats", dynlib: libname.}
proc H5Fget_name*(obj_id: hid_t; name: cstring; size: csize): ssize_t {.cdecl,
    importc: "H5Fget_name", dynlib: libname.}
proc H5Fget_info2*(obj_id: hid_t; finfo: ptr H5F_info2_t): herr_t {.cdecl,
    importc: "H5Fget_info2", dynlib: libname.}
proc H5Fget_metadata_read_retry_info*(file_id: hid_t; info: ptr H5F_retry_info_t): herr_t {.
    cdecl, importc: "H5Fget_metadata_read_retry_info", dynlib: libname.}
proc H5Fstart_swmr_write*(file_id: hid_t): herr_t {.cdecl,
    importc: "H5Fstart_swmr_write", dynlib: libname.}
proc H5Fget_free_sections*(file_id: hid_t; `type`: H5F_mem_t; nsects: csize; sect_info: ptr H5F_sect_info_t): ssize_t {.
    cdecl, importc: "H5Fget_free_sections", dynlib: libname.}
  ## out
proc H5Fclear_elink_file_cache*(file_id: hid_t): herr_t {.cdecl,
    importc: "H5Fclear_elink_file_cache", dynlib: libname.}
proc H5Fset_latest_format*(file_id: hid_t; latest_format: hbool_t): herr_t {.cdecl,
    importc: "H5Fset_latest_format", dynlib: libname.}
proc H5Fstart_mdc_logging*(file_id: hid_t): herr_t {.cdecl,
    importc: "H5Fstart_mdc_logging", dynlib: libname.}
proc H5Fstop_mdc_logging*(file_id: hid_t): herr_t {.cdecl,
    importc: "H5Fstop_mdc_logging", dynlib: libname.}
proc H5Fget_mdc_logging_status*(file_id: hid_t; is_enabled: ptr hbool_t;
                               is_currently_logging: ptr hbool_t): herr_t {.cdecl,
    importc: "H5Fget_mdc_logging_status", dynlib: libname.}
  ## OUT
  ## OUT
proc H5Fformat_convert*(fid: hid_t): herr_t {.cdecl, importc: "H5Fformat_convert",
    dynlib: libname.}
proc H5Freset_page_buffering_stats*(file_id: hid_t): herr_t {.cdecl,
    importc: "H5Freset_page_buffering_stats", dynlib: libname.}
proc H5Fget_page_buffering_stats*(file_id: hid_t; accesses: array[2, cuint];
                                 hits: array[2, cuint]; misses: array[2, cuint];
                                 evictions: array[2, cuint];
                                 bypasses: array[2, cuint]): herr_t {.cdecl,
    importc: "H5Fget_page_buffering_stats", dynlib: libname.}
proc H5Fget_mdc_image_info*(file_id: hid_t; image_addr: ptr haddr_t;
                           image_size: ptr hsize_t): herr_t {.cdecl,
    importc: "H5Fget_mdc_image_info", dynlib: libname.}
when defined(H5_HAVE_PARALLEL):
  proc H5Fset_mpi_atomicity*(file_id: hid_t; flag: hbool_t): herr_t {.cdecl,
      importc: "H5Fset_mpi_atomicity", dynlib: libname.}
  proc H5Fget_mpi_atomicity*(file_id: hid_t; flag: ptr hbool_t): herr_t {.cdecl,
      importc: "H5Fget_mpi_atomicity", dynlib: libname.}
##  Symbols defined for compatibility with previous versions of the HDF5 API.
##
##  Use of these symbols is deprecated.
##

when not defined(H5_NO_DEPRECATED_SYMBOLS):
  ##  Macros
  ## #define H5F_ACC_DEBUG	(H5CHECK H5OPEN 0x0000u)	/*print debug info (deprecated)*/
  ##  Typedefs
  ##  Current "global" information about file
  type
    INNER_C_STRUCT_890420368* = object
      hdr_size*: hsize_t       ##  Shared object header message header size
      msgs_info*: H5_ih_info_t ##  Shared object header message index & heap size

  type
    H5F_info1_t* = object
      super_ext_size*: hsize_t ##  Superblock extension size
      sohm*: INNER_C_STRUCT_890420368

  ##  Function prototypes
  proc H5Fget_info1*(obj_id: hid_t; finfo: ptr H5F_info1_t): herr_t {.cdecl,
      importc: "H5Fget_info1", dynlib: libname.}
